@@ -1,3 +1,12 @@
+2013-01-14  Alexey Proskuryakov  <ap@apple.com>
+
+        <rdar://problem/12524710> Update sandbox rules after r128003
+        https://bugs.webkit.org/show_bug.cgi?id=106840
+
+        Reviewed by Anders Carlsson.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2013-01-14  Huang Dongsung  <luxtella@company100.net>
 
         [EFL] REGRESSION(r139189): MiniBrowser renders abnormally with -r option.
